--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,11 @@
 name: MetagenomicTaxonomizer
 channels:
+  - hcc
+  - https://conda.anaconda.org/t/HC-83c774c8-94fe-4b2f-b0b2-22cd71073412/hcc
   - conda-forge
   - bioconda
   - defaults
+  - file:///util/opt/conda_repo
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
@@ -10,20 +13,16 @@ dependencies:
   - bcftools=1.15.1
   - blast=2.13.0
   - bowtie2=2.4.5
-  - brotli=1.0.9
   - brotli-bin=1.0.9
+  - brotli=1.0.9
   - bzip2=1.0.8
   - c-ares=1.18.1
   - ca-certificates=2022.6.15
-  - cd-hit=4.8.*
-  - cd-hit-auxtools=4.8.*
   - certifi=2022.6.15
   - circos=0.69.8
   - coreutils=9.1
-  - curl=7.88.1
-  - cutadapt=3.5
+  - curl=7.83.1
   - cycler=0.11.0
-  - diamond=2.1.9.0
   - entrez-direct=16.2
   - expat=2.4.8
   - fastqc=0.11.9
@@ -76,8 +75,8 @@ dependencies:
   - libstdcxx-ng=12.1.0
   - libtiff=4.4.0
   - libuuid=2.32.1
-  - libwebp=1.2.3
   - libwebp-base=1.2.3
+  - libwebp=1.2.3
   - libxcb=1.13
   - libzlib=1.2.12
   - llvm-openmp=8.0.1
@@ -89,7 +88,7 @@ dependencies:
   - munkres=1.1.4
   - ncurses=6.3
   - networkx=2.8.5
-  - nextflow=22.10.4
+  - nextflow=21.10.6
   - numpy=1.23.1
   - openjdk=8.0.332
   - openjpeg=2.4.0
@@ -97,7 +96,6 @@ dependencies:
   - openssl=1.1.1q
   - packaging=21.3
   - pcre=8.45
-  - perl=5.32.1
   - perl-archive-tar=2.40
   - perl-autoloader=5.74
   - perl-carp=1.50
@@ -109,18 +107,18 @@ dependencies:
   - perl-digest-perl-md5=1.9
   - perl-dynaloader=1.25
   - perl-encode=3.19
-  - perl-exporter=5.74
   - perl-exporter-tiny=1.002002
+  - perl-exporter=5.74
   - perl-extutils-makemaker=7.64
   - perl-font-ttf=1.06
   - perl-gd=2.76
   - perl-io-compress=2.106
   - perl-io-string=1.08
   - perl-io-zlib=1.11
-  - perl-json=4.09
   - perl-json-xs=2.34
-  - perl-list-moreutils=0.430
+  - perl-json=4.09
   - perl-list-moreutils-xs=0.430
+  - perl-list-moreutils=0.430
   - perl-math-bezier=0.01
   - perl-math-round=0.07
   - perl-math-vecstat=0.08
@@ -141,27 +139,26 @@ dependencies:
   - perl-try-tiny=0.31
   - perl-types-serialiser=1.01
   - perl-xml-parser=2.44_01
+  - perl=5.32.1
   - pillow=9.2.0
   - pip=22.2.1
   - prinseq=0.20.4
   - pthread-stubs=0.4
   - pyparsing=3.0.9
   - pysam=0.19.1
-  - python=3.9.0
   - python-dateutil=2.8.2
+  - python=3.9.0
   - python_abi=3.9
   - quast=5.2.0
   - racon=1.5.0
   - ragtag=2.1.0
-  - r-base=4.4.1
   - readline=8.1.2
-  - r-taxonomizr=0.10.6
   - samtools=1.15.1
   - setuptools=63.2.0
   - simplejson=3.17.6
   - six=1.16.0
   - sortedcontainers=2.4.0
-  - spades=4.0.0
+  - spades=3.15.5
   - sqlite=3.39.2
   - sysroot_linux-64=2.17
   - tbb=2020.2
@@ -176,3 +173,19 @@ dependencies:
   - xz=5.2.5
   - zlib=1.2.12
   - zstd=1.5.2
+  - cutadapt
+  - cd-hit
+  - cd-hit-auxtools
+  - diamond=2.1.9.0
+  - cmake
+  - r-base
+  - r-taxonomizr
+  - r::r-curl
+  - seqtk
+  - r-optparse
+  - r-taxize
+  - bioconductor-biostrings
+  - r-tidyverse
+  - r-tidyheatmaps
+  - r-argparse
+prefix: /home/crosslab/rachelwu/.conda/envs/MetagenomicTaxonomizer
